[gd_scene load_steps=8 format=3 uid="uid://ssfwuy2blt4l"]

[ext_resource type="Script" path="res://scripts/dialog/dialog.gd" id="1_f3t5c"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="2_3m6lp"]
[ext_resource type="Texture2D" uid="uid://bw2ul0gyuvirm" path="res://assets/background.png" id="2_oi2nk"]
[ext_resource type="Texture2D" uid="uid://deve8kursx3nx" path="res://assets/sprites/anubis_placeholder.png" id="3_i4b66"]
[ext_resource type="Script" path="res://scripts/dialog/black_screen.gd" id="3_q1p8c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm75u"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_762y4"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.701961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Dialog" type="Node2D"]
script = ExtResource("1_f3t5c")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.807843, 0.72549, 0.694118, 0.811765)
z_index = -1
position = Vector2(638.021, 318.266)
scale = Vector2(0.447902, 0.447902)
texture = ExtResource("2_oi2nk")

[node name="DialogBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 560.0
offset_right = 680.0
offset_bottom = 600.0
metadata/_edit_use_anchors_ = true

[node name="CharacterSprite" type="Sprite2D" parent="DialogBox"]
position = Vector2(376, -73)
scale = Vector2(0.712625, 0.712625)
texture = ExtResource("3_i4b66")

[node name="BlackScreen" type="Panel" parent="DialogBox"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -640.0
offset_top = -560.0
offset_right = 642.0
offset_bottom = 162.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tm75u")
script = ExtResource("3_q1p8c")

[node name="Panel" type="Panel" parent="DialogBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -52.0
offset_right = 356.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_762y4")

[node name="Speaker" type="Label" parent="DialogBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -344.0
offset_top = -16.0
offset_right = -304.0
offset_bottom = 11.0
theme_override_font_sizes/font_size = 19
text = "You"

[node name="Text" type="RichTextLabel" parent="DialogBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -4.0
offset_right = 316.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 19
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
script = ExtResource("2_3m6lp")
seconds_per_step = 0.03
pause_at_characters = ".?!-"
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="Skip" type="Button" parent="DialogBox"]
layout_mode = 0
offset_left = 579.0
offset_top = -549.0
offset_right = 634.0
offset_bottom = -518.0
text = "Skip"

[connection signal="finished_typing" from="DialogBox/Text" to="." method="_on_text_finished_typing"]
[connection signal="pressed" from="DialogBox/Skip" to="." method="_on_skip_pressed"]
